# ultraskate_buddy

backend/: main.py  pyproject.toml
backend/app/core/: config.py
backend/app/models/: user.py
backend/app/schemas/: user.py
backend/app/services/: auth_service.py
